--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
       <md-button aria-label="..." class="md-fab md-raised md-mini" ng-click="main.addItem('checkboxes')"><i class="material-icons">check_box</i>
         <md-tooltip md-direction="left" md-autohide="">Checkboxes</md-tooltip>
       </md-button>
+      <md-button aria-label="..." class="md-fab md-raised md-mini" ng-click="main.addItem('label')"><i class="material-icons">label</i>
+        <md-tooltip md-direction="left" md-autohide="">Label</md-tooltip>
+      </md-button>
     </md-fab-actions>
   </md-fab-speed-dial><a href="https://github.com/vlio20/angular-material-form-builder"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
   <script
